Rename AddUserToOrganization to CreateOrganizationUser (#16) (#18)
I now think it's better to follow the standard API spec as we will have a list and a delete method.

Add ListOrganizationUsers to UsersService
